fix warning Tippy/ add title & favicon/ add overlay scrollbar

--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -7,6 +7,7 @@
     width: var(--default-layout-width);
     display: flex;
     padding: 0 var(--default-layout-horizontal-spacer);
+    margin-top: var(--default-layout-header-height);
 }
 .content {
     flex: 1;
