--- a/src/components/Layout/components/Search/Search.module.scss
+++ b/src/components/Layout/components/Search/Search.module.scss
@@ -20,6 +20,7 @@
         caret-color: var(--primary);
         background-color: transparent;
         font-family: var(--font-family);
+        padding-right: 40px;
     }
     input:not(:placeholder-shown) ~ .search-btn {
         color: rgba(22, 24, 35, 0.75);
