--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -10,7 +10,10 @@
 .menu-popper {
     padding-bottom: 8px;
 }
-
+.menu-body {
+    overflow-y: auto;
+    // overflow-y: overlay;
+}
 // Menu items
 .menu-item {
     width: 100%;
@@ -29,6 +32,7 @@
 // header
 .header {
     position: relative;
+    flex-shrink: 0;
     height: 50px;
     margin-top: -8px;
 }
